--- a/index.html
+++ b/index.html
@@ -7,17 +7,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="radio-container">
-        <button id="playButton">Play Radio</button>
-         <div class="volume-controls">
-            <label for="volumeSlider">Volume: </label>
-            <input id="volumeSlider" type="range" min="0" max="1" step="0.01" value="0.5">
-            <input id="volumeInput" type="number" min="0" max="1" step="0.01" value="0.5">
+    <div class="background-container">
+        <!-- Title goes here, positioned at the top -->
+        <h1 class="title">Live Radio Stream</h1>
+
+        <div class="radio-container">
+            <button id="playPauseButton" class="play-button" onclick="togglePlayPause()">
+                <img id="playPauseIcon" src="img/play.png" alt="Play" class="icon">
+            </button>
+
+            <div class="volume-controls">
+                <label for="volumeSlider">Volume: </label>
+                <input id="volumeSlider" type="range" min="0" max="1" step="0.01" value="0.5">
+                <input id="volumeInput" type="number" min="0" max="1" step="0.01" value="0.5">
+            </div>
+
+            <audio id="radioPlayer" controls>
+                <source id="radioSource" src="" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
         </div>
-        <audio id="radioPlayer" controls>
-            <source id="radioSource" src="" type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
     </div>
 
     <script src="script.js"></script>
