--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Radio Stream</title>
+    <title>O Reino Escondido®</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="background-container">
         <!-- Title goes here, positioned at the top -->
-        <h1 class="title">Live Radio Stream</h1>
+        <h1 class="title">Echoes of The Hidden World</h1>
 
         <div class="radio-container">
             <button id="playPauseButton" class="play-button" onclick="togglePlayPause()">
